styles/homePage.css
/* ... */
.b1 span:first-child, .b1 i, #hpRightPanel i, #hpLeftPanel i {
  font-family: 'customFont';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-star:before {
  content: "\e600";
}
.icon-eye:before {
  content: "\e601";
}
.icon-book:before {
  content: "\e602";
}
.icon-user:before {
  content: "\e603";
}
.icon-menu:before {
  content: "\e604";
}
.icon-menu2:before {
  content: "\e605";
}
.icon-plus:before {
  content: "\e606";
}
.icon-cart:before {
  content: "\e607";
}
.icon-aid:before {
  content: "\e608";
}
.icon-credit:before {
  content: "\e609";
}
.icon-star:before {
  content: "\e60a";
}
.icon-star2:before {
  content: "\e60b";
}
.icon-cart:before {
  content: "\e60c";
}
.icon-backward:before {
  content: "\e60d";
}
.icon-enter:before {
  content: "\e60e";
}
.icon-exit:before {
  content: "\e60f";
}

#dashboard-menu {
  position: relative;
}

/*svg {height: 0px; width: 0px}*/
#section {
  width:90%; margin-left:5%;
}

#blurrySection1 {
/*
  position: absolute;
  z-index: -1;
*/
  height: 200px;
  width: 90%;
  top: 0px; left: 0px;
  background: -moz-element(#section);
  filter: url(data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+DQoJPGZpbHRlciBpZD0iYmx1ciI+DQoJCTxmZUdhdXNzaWFuQmx1ciBzdGREZXZpYXRpb249IjEwIiAvPg0KCTwvZmlsdGVyPg0KPC9zdmc+#blur10);
}

#section1::before {
  content: '';
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  -webkit-filter: blur(4px) contrast(0.4) brightness(1.4); 
  -o-filter: blur(4px); -ms-filter: blur(4px); filter: blur(4px);
  filter: url("data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1"><filter><feGaussianBlur in="SourceGraphic" stdDeviation="2" /></filter></svg>");
  background: -moz-element(#homePage) no-repeat: fixed;
  
  opacity: 0.4;
  padding: 8px;
  top: -8px;
  left: -8px;
}

body > .section:not([data-role="page"]) {
  opacity: 0;
}

/*
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 100;
  src: local('Lato Hairline'), local('Lato-Hairline'), url(http://themes.googleusercontent.com/static/fonts/lato/v7/Kom15zUm24dIPfIRiNogNuvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(http://themes.googleusercontent.com/static/fonts/lato/v7/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
}
*/

/* END FONT */

.cta {
  -webkit-box-sizing: border-box; 
     -moz-box-sizing: border-box; 
          box-sizing: border-box;

  cursor: pointer;
	border: none; 
  display:inline-block;

  color: #fff;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
/*  font-weight: bold !important;*/
  cursor: pointer;
  white-space: nowrap;
  overflow: hidden;
  padding: 20px 40px;
/*  font-size: 16px;*/
  border: none;
  border-radius: 5px;
  background:#2892c6;
}

.section .cta {
  width: 220px;
  max-width: 90%;
  margin-bottom: 10px;
}

@media only screen and (max-width: 480px) {
  .section {
    padding: 0 10px;
  }  
}

#homePage .menuItems {
  -webkit-filter: brightness(0.8);
     -moz-filter: brightness(0.8);
          filter: brightness(0.8);
}

.section-content {
  margin: 0 auto;
  max-width: 1000px;
  height: 100%;
}

.title-block {
  text-align: center;
}

.section-title {
  display: block;
  margin: 10px 0 0;
  padding-top: 5px;
  padding-bottom: 5px;
  /*color: #3d424a;*/
  color:#83C2E0;
  font-size: 30px;
  font-weight: 600;
  text-transform: uppercase;
}

.section-title._2 {
  margin-top: 0px;
/*  color: #20b36c;
  color: #909DD3;*/
  color: #757575;
  font-size: 16px;
  line-height: 25px;
  font-weight: 400;
  text-transform: none;
}

.paging {
  width:100%; 
  text-align:center; 
  position: absolute; 
  cursor: pointer;
}

.pgDown {
  bottom: 0;
}

.pgUp {
  top: 0;
}

.span_1_of_3 i { 
  max-width: 100%; 
  font-size: 96px;
}

.span_1_of_4 i {
  font-size: 72px;
}

.section .span_1_of_3, .section .span_1_of_4 {
  padding: 0 10px;
  font-size: 14px;
  min-height: 400px;
}

.col h4 {
  color: inherit;
}

.group {
  margin-bottom: 40px;
}

#homePage .logo {
  font-size: 100px;
}

#homePage h1 {
  font-size: 40px;
}

#homePage h2 {
  font-size: 14px;
}

@media only screen and (min-height: 600px) {
  .section-content {
    padding: 40px 0 0;
  }
  
  .group {
    margin-top: 40px;
  }
}

@media only screen and (min-height: 800px) {
  .section-content {
    padding: 80px 0 0;
  }
}

@media only screen and (min-height: 600px) , screen and (min-width: 720px) {
  .section-title {
    font-size: 40px;
  }
}

@media only screen and (min-width: 440px) and (min-height: 500px) {
  .cta {
    padding: 25px 50px;
  }

  #homePage .logo {
    font-size: 200px;
  }
  
  #homePage h1 {
    font-size: 70px;
  }

  #homePage h2 {
    font-size: 18px;
  }
}

@media only screen and (min-width: 800px) and (min-height: 600px) {
  .group {
    margin-top: 60px;
    margin-bottom: 60px;
  }
  
  .title-block {
    margin-top: 50px;
  }
}

.section .link {
  padding-bottom: 3px;
  border-bottom: 2px solid #7aaac3;
  color: #7aaac3;
  font-size: 1.2rem;
  text-decoration: none;
}

.pricing-section > * {
  border: 1px solid #e3e9ec;
  height: auto;
  padding: 40px 15px;
}

.pricing-section.group {
  margin-top: 50px;
}

.pricing-section li {
  list-style: none;
}

.pricing-1 {
  border-top: 8px solid #3b96d2;
}

.pricing-1 i {
  color: #3b96d2;
}

.pricing-1 .cta {
  background-color: #3b96d2;
  border-color: #3b96d2;
}

.pricing-2.col {
  border-top: 8px solid #D44937;
}

.pricing-2 i {
  color: #D44937;
}

.pricing-2 .cta {
  background-color: #D44937;
  border-color: #D44937;
}

.pricing-3 {
  border-top: 8px solid #1AC458;
}

.pricing-3 i {
  color: #1AC458;
}
/* ... */

